--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,8 +15,8 @@
     RewriteRule ^ %1 [L,R=301]
 
     RewriteEngine On
-    RewriteCond %{HTTPS} !on
-    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
